# LuaLB

./: .gitignore  AUTHORS  Makefile  Makefile.am  NOTES  README.md  TODO  aclocal.m4  config.h  config.status  configure  configure.ac  error.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
code-base/: README.md
code-base/lualb/: configure
code-base/test-hdf5/: README.md  test.cpp
doc/: Makefile  Makefile.in
examples/: BGK-2d.lua  Makefile  Makefile.am  Makefile.in  Poiseuille-flow-2d.lua  Poiseuille-flow-3d.lua  README  binary-BGK-2d.lua  binary-fluids-2d.lua  binary-fluids-3d.lua  couette.lua  mpi.job.example  utils.lua
lualb/: Makefile.am  Makefile.in  README  configure  configure.ac
lualb-lua-5.1.x/src/lua/: Makefile.am
lualb/doc/: INSTALL.txt
lualb/examples/: Poiseuille-flow-2d.lua  binary-fluids-3d.lua  couette.lua
lualb/src/BGK/: Makefile.am  lb-d2q9-BGK.c  lb-d2q9-BGK.h  lb-d3q19-BGK.h
lualb/test/: Landau-binary-fluids-2d.lua  Landau-binary-fluids-3d.lua  binary-fluids-2d.lua  lualb.job
src/: Makefile  Makefile.in
src/BGK/: Makefile  Makefile.in  lb-BGK.c  lb-BGK.h  lb-d2q9-BGK.c  lb-d3q19-BGK.c
src/Landau/: Makefile  Makefile.in  lb-d2q9-Landau.c  lb-d3q19-Landau.c
src/Mix/: Makefile  Makefile.in  lb-d2q9-Mix.c  lb-d3q19-Mix.c
test/: Landau-binary-fluids-2d.lua  Landau-binary-fluids-3d.lua  Makefile  Makefile.in  Poiseuille-flow-2d.lua  Poiseuille-flow-3d.lua  README  binary-fluids-2d.lua  color.lua
trunk/: configure  configure.ac
trunk/src/Mix/: Makefile.am
wiki/: DataVisualization.wiki  Installation.wiki
(+103 files in other folders)
